# news_pars

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: sources.yaml
news_ingestion/: cli.py  pipeline.py  settings.py  storage.py
news_ingestion/adapters/: html.py
tests/: test_adapters.py  test_config.py  test_dedup.py  test_pipeline.py  test_storage.py  test_tickers.py
