[project]
name = "news-pars"
version = "0.1.0"
description = "Minimal SQLite parser for Russian market news sources."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apscheduler>=3.11.1,<4.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "feedparser>=6.0.12,<7.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "trafilatura>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.14.8,<1.0.0",
]

[project.scripts]
news-pars = "news_ingestion.cli:main"

[tool.poetry]
packages = [{include = "news_ingestion"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.14.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
